Beta2.1.0 (#3)
* Mods clients pris en charge

* Bouton de connexion avec la webview cliquable mais avec un message d'erreur

* JAVAFX + WEBVIEW

* Ajout des fichiers customs selon le profil (différente configuration des touches, la langue, des mondes solo, les shaders, les resource packs)

* Les boutons shaders et resource packs de la page des mods ouvrent le dossier lié (temporaire jusqu'à ce qu'on puisse le faire depuis le launcher)